--- a/views/recover.html
+++ b/views/recover.html
@@ -16,7 +16,7 @@
   <section class="text-center">
     <!-- Background image -->
     <div class="p-5 bg-image" style="
-        background-image: url('https://img.freepik.com/foto-gratis/imagen-primer-plano-programador-trabajando-su-escritorio-oficina_1098-18707.jpg?w=996&t=st=1678524304~exp=1678524904~hmac=1b8abed8d72bd0ff32b9d95639370da80ef6c5cdc97c10bdabc7b9f53380c529');
+        background-image: url('https://www.doonamis.es/wp-content/uploads/2020/11/Era-de-la-Digitalizacion-Que-hace-un-programador-scaled.jpg');
         height: 19rem;
         background-position: center;
         background-size: cover;
