--- a/views/success.html
+++ b/views/success.html
@@ -15,7 +15,7 @@
   <section class="text-center">
     <!-- Background image -->
     <div class="p-5 bg-image" style="
-      background-image: url('https://img.freepik.com/foto-gratis/pantallas-computadora-que-ejecutan-codigo-programacion-oficina-agencia-desarrollo-software-vacio-computadoras-que-analizan-algoritmos-datos-segundo-plano-servidores-red-neuronal-cloud-computing-sala-datos_482257-33353.jpg?w=1380&t=st=1678521556~exp=1678522156~hmac=9a5fbdd05b83cbe1f7a7807a83cd7d4eab726c716fff93895d9305e06b07d317');
+      background-image: url('https://weremote.net/wp-content/uploads/2022/08/programador-concentrado-ordenador-oficina.jpg');
       height: 19rem;
       background-position: center;
       background-size: cover;
