--- a/views/home.html
+++ b/views/home.html
@@ -5,17 +5,161 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <title>Inicio</title>
 </head>
 
 <body style="display: flex; flex-direction: column; min-height: 100vh;">
   <%- include('partials/encabezado.html') %>
-  <p class="display-1 text-center mt-5">Bienvenido <%= username %></p>
-  <div class="w-100 d-flex" style=>
-    <a href="/logout" style="margin: 0 auto;" class="btn btn-info btn-block mt-5 mb-3">
-      Cerrar Sesión
-    </a>
+  <%- include('partials/perfil.html') %>
+
+  <div class="courses-area section-padding40 fix">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-xl-7 col-lg-8">
+          <div class="section-tittle text-center mb-55">
+            <h2>Cursos Disponibles</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="properties properties2 mb-30">
+            <div class="properties__card">
+              <div class="properties__img overlay1">
+                <a><img src="/img/js2.png" alt=""></a>
+              </div>
+              <div class="properties__caption">
+                <p>JavaScript</p>
+                <h3><a href="#">Introduccion a JavaScript</a></h3>
+                <p>En este curso aprenderá que es JavaScript, la historia de JavaScript, las versiones de JavaScript y como ejecutar JavaScript.
+                </p>
+                <div class="properties__footer d-flex justify-content-between align-items-center">
+                  <div class="restaurant-name">
+                    <p><span>(4.7/5)</span> 3243 opiniones</p>
+                  </div>
+                </div>
+                <a href="#" class="border-btn border-btn2 text-decoration-none">Entrar al curso</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="properties properties2 mb-30">
+            <div class="properties__card">
+              <div class="properties__img overlay1">
+                <a><img src="./img/js.jpg" alt=""></a>
+              </div>
+              <div class="properties__caption">
+                <p>JavaScript</p>
+                <h3><a href="#">Variables en JavaScript</a></h3>
+                <p>En este curso aprenderá como declarar variables en JavaScript, buenas practicas al nombrar las variables, y manejo de las variables en JavaScript.
+                </p>
+                <div class="properties__footer d-flex justify-content-between align-items-center">
+                  <div class="restaurant-name">
+                    <p><span>(4.2/5)</span> 6323 opiniones</p>
+                  </div>
+                </div>
+                <a href="#" class="border-btn border-btn2 text-decoration-none">Entrar al curso</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="properties properties2 mb-30">
+            <div class="properties__card">
+              <div class="properties__img overlay1">
+                <a><img src="/img/tiposDatos.png" alt=""></a>
+              </div>
+              <div class="properties__caption">
+                <p>JavaScript</p>
+                <h3><a href="#">Tipos de datos en JavaScript</a></h3>
+                <p>En este curso aprenderá los diferentes tipos de datos que existen en JavaScript,
+                  y como manipular este tipo de datos en JavaScript.
+                </p>
+                <div class="properties__footer d-flex justify-content-between align-items-center">
+                  <div class="restaurant-name">
+                    <p><span>(4.5/5)</span> 2355 opiniones</p>
+                  </div>
+                </div>
+                <a href="#" class="border-btn border-btn2 text-decoration-none">Entrar al curso</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="properties properties2 mb-30">
+            <div class="properties__card">
+              <div class="properties__img overlay1">
+                <img src="/img/estructuradatos.jpg" alt="">
+              </div>
+              <div class="properties__caption">
+                <p>JavaScript</p>
+                <h3><a href="#">Estructura de datos en JavaScript</a></h3>
+                <p>En este curso aprenderá las distintas estructuras de datos que existen en JavaScript, y como funciona cada una de ellas.
+                </p>
+                <div class="properties__footer d-flex justify-content-between align-items-center">
+                  <div class="restaurant-name">
+                    <p><span>(4.7/5)</span> 1523 opiniones</p>
+                  </div>
+                </div>
+                <a href="#" class="border-btn border-btn2 text-decoration-none">Entrar al curso</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="properties properties2 mb-30">
+            <div class="properties__card">
+              <div class="properties__img overlay1">
+                <a><img src="/img/librerias.jpg" alt=""></a>
+              </div>
+              <div class="properties__caption">
+                <p>JavaScript</p>
+                <h3><a href="#">Librerías en JavaScript</a></h3>
+                <p>En este curso aprenderá algunas librerías de JavaScript, que le serán demasiado útiles a la hora de desarrollar proyectos enJavaScript.
+                </p>
+                <div class="properties__footer d-flex justify-content-between align-items-center">
+                  <div class="restaurant-name">
+                    <p><span>(4.1/5)</span> 2485 opiniones</p>
+                  </div>
+                </div>
+                <a href="#" class="border-btn border-btn2 text-decoration-none">Entrar al curso</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="properties properties2 mb-30">
+            <div class="properties__card">
+              <div class="properties__img overlay1">
+                <a><img src="/img/promises.jpg" alt=""></a>
+              </div>
+              <div class="properties__caption">
+                <p>JavaScript</p>
+                <h3><a href="#">Promesas en JavaScript</a></h3>
+                <p>En este curso aprenderá a utilizar las Promesas en JavaScript, como funcionan y en que casos puede utilizarlas.
+                </p>
+                <div class="properties__footer d-flex justify-content-between align-items-center">
+                  <div class="restaurant-name">
+                    <p><span>(4.7)</span> 3243 opiniones</p>
+                  </div>
+                </div>
+                <a href="#" class="border-btn border-btn2 text-decoration-none">Entrar al curso</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-xl-7 col-lg-8">
+          <div class="section-tittle text-center mt-40">
+            <a href="#" class=" border-btn text-decoration-none">Mostrar mas</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <%- include('partials/pie.html') %>
 
