--- a/views/partials/pie.html
+++ b/views/partials/pie.html
@@ -7,7 +7,7 @@
       <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
         <h5 class="text-uppercase mb-4">Acerca de</h5>
 
-        <p>
+        <p class="text-white">
           Somos una plataforma de aprendizaje donde se imparten cursos enfocados al área de tecnologías, nos especializamos en la enseñanza de lenguajes de programación.
         </p>
 
