--- a/views/login.html
+++ b/views/login.html
@@ -24,7 +24,7 @@
 
           <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5 ">
 
-            <form style="min-height: 30rem;" action="/" method="post">
+            <form style="min-height: 30rem;" action="/login" method="post">
 
               <h2 class="fw-bold mb-3 pb-3" style="letter-spacing: .8px;">Iniciar Sesión</h2>
 
