--- a/views/recover.html
+++ b/views/recover.html
@@ -50,7 +50,7 @@
               <button type="submit" class="btn btn-info btn-block mb-4" id="recover">
                 Solicitar
               </button>
-              <p>Deseas regresar? <a href="/" class="link-info">Iniciar sesión</a></p>
+              <p>Deseas regresar? <a href="/login" class="link-info">Iniciar sesión</a></p>
             </form>
           </div>
         </div>
@@ -63,7 +63,7 @@
 
 <script>
   const claveAlerta = () => {
-    window.location = "/";
+    window.location = "/login";
     alert('Te hemos enviado tu clave de recuperación al correo proporcionado');
   };
 </script>
