--- a/views/register.html
+++ b/views/register.html
@@ -63,7 +63,7 @@
               <%
               }
               %>
-              <p>Ya tiene una cuenta? <a href="/" class="link-info">Iniciar sesión</a></p>
+              <p>Ya tiene una cuenta? <a href="/login" class="link-info">Iniciar sesión</a></p>
             </form>
           </div>
         </div>
