--- a/views/success.html
+++ b/views/success.html
@@ -29,8 +29,8 @@
       ">
       <div class="card-body py-5 px-md-5">
         <p class="display-1">Usuario registrado exitosamente.</p>
-        <a href="/" class="btn btn-info btn-block mb-4">
-          Iniciar Sesion
+        <a href="/login" class="btn btn-info btn-block mb-4">
+          Iniciar Sesión
         </a>
 
       </div>
