--- a/views/home.html
+++ b/views/home.html
@@ -32,7 +32,7 @@
               </div>
               <div class="properties__caption">
                 <p>JavaScript</p>
-                <h3><a href="#">Introduccion a JavaScript</a></h3>
+                <h3><a href="/temario">Introduccion a JavaScript</a></h3>
                 <p>En este curso aprenderá que es JavaScript, la historia de JavaScript, las versiones de JavaScript y como ejecutar JavaScript.
                 </p>
                 <div class="properties__footer d-flex justify-content-between align-items-center">
@@ -40,7 +40,7 @@
                     <p><span>(4.7/5)</span> 3243 opiniones</p>
                   </div>
                 </div>
-                <a href="#" class="border-btn border-btn2 text-decoration-none">Entrar al curso</a>
+                <a href="/temario" class="border-btn border-btn2 text-decoration-none">Entrar al curso</a>
               </div>
             </div>
           </div>
