--- a/views/partials/encabezado.html
+++ b/views/partials/encabezado.html
@@ -1,11 +1,14 @@
-<nav class="navbar navbar-dark" style="background-color: #23242a;">
+<nav class="navbar navbar-dark" style="background-color: #23242a">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <img src="https://sashabarab.org/wp-content/uploads/2015/02/course-icon.png" height="60" alt="MDB Logo" loading="lazy" />
+      <img
+        src="img/course-icon.png"
+        height="60"
+        alt="MDB Logo"
+        loading="lazy" />
     </a>
     <a class="navbar-brand" href="/">
       <h2>LearnCode</h2>
     </a>
   </div>
-
 </nav>
