--- a/views/cuestionario.html
+++ b/views/cuestionario.html
@@ -36,7 +36,7 @@
           <p><strong>1. Pregunta numero uno. </strong></p>
           <div type="A" class="btn-group flex-wrap">
             <input type="radio" class="btn-check" name="pregunta1" id="p11" />
-            <label class="btn btn-secondary" for="p11">Correcta</label>
+            <label class="btn btn-secondary custombtn" for="p11">Correcta</label>
             <input type="radio" class="btn-check" name="pregunta1" id="p12" />
             <label class="btn btn-secondary" for="p12">Incorrecta</label>
             <input type="radio" class="btn-check" name="pregunta1" id="p13" />
