--- a/views/cuestionario.html
+++ b/views/cuestionario.html
@@ -15,8 +15,11 @@
   <%- include('partials/encabezado.html') %>
   <div class="container">
     <a href="/temario" class="text-dark" style="text-decoration: none;">
+
       <h3 class="m-b-50 heading-line">
-        Introduccion a JavaScript <i class="fa fa-bell text-muted"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#29B6F6" class="bi bi-arrow-left-square-fill" viewBox="0 0 20 20">
+          <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z" />
+        </svg> Introduccion a JavaScript <i class="fa fa-bell text-muted"></i>
       </h3>
     </a>
     <div class="row">
@@ -96,9 +99,12 @@
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8 mb-3">
               <div class="section-tittle text-center mt-40">
-                <a href="/tema2" class="border-btn text-decoration-none">JavaScript en Documentos</a>
-                <btn onclick="resultado()" class="border-btn text-decoration-none">Enviar</btn>
-                <a href="/temario" class="border-btn text-decoration-none">Lista Temas</a>
+                <a href="/tema2" class="border-btn text-decoration-none"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 20 20">
+                    <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z" />
+                  </svg> JavaScript en Documentos</a>
+                <a onclick="resultado()" class="border-btn text-decoration-none">Enviar <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-check-square-fill" viewBox="0 0 20 20">
+                    <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z" />
+                  </svg></a>
               </div>
             </div>
           </div>
