--- a/views/tema2.html
+++ b/views/tema2.html
@@ -20,7 +20,9 @@
     <div class="container">
       <a href="/temario" class="text-dark" style="text-decoration: none;">
         <h3 class="m-b-50 heading-line">
-          Introduccion a JavaScript <i class="fa fa-bell text-muted"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#29B6F6" class="bi bi-arrow-left-square-fill" viewBox="0 0 20 20">
+            <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z" />
+          </svg> Introduccion a JavaScript <i class="fa fa-bell text-muted"></i>
         </h3>
       </a>
       <h1>Cómo incluir JavaScript en documentos XHTML</h1>
@@ -149,11 +151,13 @@
       <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-8">
           <div class="section-tittle text-center mt-40">
-            <a href="/tema1" class="border-btn text-decoration-none">¿Que es JavaScript?
+            <a href="/tema1" class="border-btn text-decoration-none"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 20 20">
+                <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z" />
+              </svg> ¿Que es JavaScript?
             </a>
-            <a href="/cuestionario" class="border-btn text-decoration-none">Cuestionario
-            </a>
-            <a href="/temario" class="border-btn text-decoration-none">Lista Temas
+            <a href="/cuestionario" class="border-btn text-decoration-none">Cuestionario <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-right-square-fill" viewBox="0 0 20 20">
+                <path d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1z" />
+              </svg>
             </a>
           </div>
         </div>
